deploy/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ops-view
  labels:
    app.kubernetes.io/name: kube-ops-view
    app.kubernetes.io/part-of: kube-ops-view
    name: kube-ops-view
