deploy/production/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-ops-view-redis
  namespace: kube-ops-view
  labels:
    app.kubernetes.io/name: kube-ops-view
    app.kubernetes.io/component: redis
    app.kubernetes.io/part-of: kube-ops-view
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
    protocol: TCP
  selector:
    app.kubernetes.io/name: kube-ops-view
    app.kubernetes.io/component: redis
